--- a/app/src/main/res/layout/view_feed_result.xml
+++ b/app/src/main/res/layout/view_feed_result.xml
@@ -16,18 +16,9 @@
         android:singleLine="true"
         android:paddingBottom="2dp"
         android:paddingTop="2dp"
+        android:textSize="14sp"
         android:textAppearance="?android:attr/textAppearanceListItemSmall"/>
-    <TextView
-        android:id="@+id/feed_description"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_vertical"
-        android:singleLine="true"
-        android:paddingBottom="2dp"
-        android:paddingTop="2dp"
-        android:textAppearance="?android:attr/textAppearanceListItemSmall"
-        android:textColor="@color/secondary_text_material_dark"
-        />
+
     <TextView
         android:id="@+id/feed_url"
         android:layout_width="match_parent"
@@ -36,6 +27,20 @@
         android:singleLine="true"
         android:paddingBottom="2dp"
         android:paddingTop="2dp"
+        android:textSize="14sp"
+        android:textAppearance="?android:attr/textAppearanceListItemSmall"
+        android:textColor="@color/secondary_text_material_dark"
+        />
+
+    <TextView
+        android:id="@+id/feed_description"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical"
+        android:singleLine="true"
+        android:paddingBottom="2dp"
+        android:paddingTop="2dp"
+        android:textSize="14sp"
         android:textAppearance="?android:attr/textAppearanceListItemSmall"
         android:textColor="@color/secondary_text_material_dark"
         />
