Display domains of links to be opened
Signed-off-by: Jonas Kalderstam <jonas@kalderstam.se>

--- a/app/src/main/res/layout/view_story.xml
+++ b/app/src/main/res/layout/view_story.xml
@@ -64,6 +64,7 @@
                 android:layout_marginEnd="2dp"
                 android:singleLine="true"
                 android:visibility="visible"
+                android:ellipsize="middle"
                 android:layout_alignParentStart="true"
                 android:layout_toStartOf="@id/story_date"
                 android:text="SuperDuperFeedWithVeryLongAddressIOnded.com"
