Moved to recyclerview now that lollipop is released
Signed-off-by: Jonas Kalderstam <jonas@kalderstam.se>

--- a/app/src/main/res/layout/activity_feed.xml
+++ b/app/src/main/res/layout/activity_feed.xml
@@ -34,6 +34,7 @@
                      android:visibility="gone"
                      android:minHeight="3dp"/>
 
+            <include layout="@layout/include_new_items_button"/>
             <include layout="@layout/include_floating_add_button"/>
 
         </FrameLayout>
