--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -170,6 +170,12 @@
         <item name="android:textColor">@color/tertiary_text_material_dark</item>
     </style>
 
+    <style name="TextAppearance.NewItems">
+        <item name="android:textColor">@color/primary_text_default_material_dark</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:fontFamily">sans-serif</item>
+    </style>
+
     <style name="TextAppearance.Reader"/>
     <style name="TextAppearance.Reader.Title">
         <item name="android:textColor">@color/white_54</item>
