Tweak grid a little
Signed-off-by: Jonas Kalderstam <jonas@kalderstam.se>

--- a/app/src/main/res/layout/fragment_feed.xml
+++ b/app/src/main/res/layout/fragment_feed.xml
@@ -12,6 +12,8 @@
         android:layout_height="match_parent"
         android:scrollbarStyle="outsideOverlay"
         android:scrollbars="vertical"
+        android:paddingLeft="@dimen/feed_list_padding"
+        android:paddingRight="@dimen/feed_list_padding"
         />
 
     <include
