--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -29,9 +29,12 @@
 
     <dimen name="navdrawer_unreadcount_textsize">12sp</dimen>
 
+    <dimen name="grid_item_size">200dp</dimen>
+
 
     <!-- Edit Feed window size -->
     <dimen name="session_details_floating_width">300dp</dimen>
     <dimen name="session_details_floating_height">300dp</dimen>
     <dimen name="session_details_extra_space_bottom">48dp</dimen>
+    <dimen name="feed_list_padding">0dp</dimen>
 </resources>
