--- a/app/src/main/res/layout/fragment_reader.xml
+++ b/app/src/main/res/layout/fragment_reader.xml
@@ -9,7 +9,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="?android:actionBarSize"
+        android:paddingTop="?actionBarSize"
         android:paddingStart="@dimen/keyline_1"
         android:paddingEnd="@dimen/keyline_1"
         android:paddingBottom="@dimen/activity_vertical_margin"
