--- a/app/src/main/res/layout/padding_header_item.xml
+++ b/app/src/main/res/layout/padding_header_item.xml
@@ -2,6 +2,6 @@
 
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
-             android:layout_height="?android:actionBarSize">
+             android:layout_height="?actionBarSize">
 
 </FrameLayout>
