--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -37,4 +37,11 @@
     <dimen name="session_details_floating_height">300dp</dimen>
     <dimen name="session_details_extra_space_bottom">48dp</dimen>
     <dimen name="feed_list_padding">0dp</dimen>
+
+    <!-- text sizes -->
+    <dimen name="reader_title">24sp</dimen>
+    <dimen name="reader_author">14sp</dimen>
+    <dimen name="reader_body">16sp</dimen>
+    <dimen name="listitem_author">12sp</dimen>
+    <dimen name="listitem_body">14sp</dimen>
 </resources>
