Add hidden snackbar, WIP

--- a/app/src/main/res/layout/fragment_reader.xml
+++ b/app/src/main/res/layout/fragment_reader.xml
@@ -23,6 +23,7 @@
             style="@style/TextAppearance.Reader.Title"
             android:layout_marginBottom="6dp"
             android:textIsSelectable="true"
+            android:transitionName="title"
             android:text="@string/title"/>
 
         <TextView
