--- a/app/src/main/res/layout/view_story.xml
+++ b/app/src/main/res/layout/view_story.xml
@@ -80,20 +80,9 @@
             android:layout_marginEnd="4dp"
             android:text="A long text that is supposed to touch the end of the line"
             android:maxLines="5"
+            android:transitionName="title"
             style="@style/TextAppearance.Title"
             />
-
-        <TextView
-            android:id="@+id/story_body"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="4dp"
-            android:layout_marginTop="2dp"
-            android:layout_marginEnd="4dp"
-            android:maxLines="3"
-            android:visibility="gone"
-            android:text="@string/app_name"
-            style="@style/TextAppearance.Body"/>
     </LinearLayout>
 
 </RelativeLayout>
