--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -25,7 +25,7 @@
 
     <dimen name="headerbar_elevation">2dp</dimen>
 
-    <dimen name="navdrawer_width">260dp</dimen>
+    <dimen name="navdrawer_width">300dp</dimen>
 
     <dimen name="navdrawer_unreadcount_textsize">12sp</dimen>
 
@@ -59,4 +59,5 @@
     <!-- Used for MyQuoteSpan -->
     <dimen name="reader_quote_gap_width">8dp</dimen>
     <dimen name="reader_quote_stripe_width">2dp</dimen>
+    <dimen name="switch_padding">4dp</dimen>
 </resources>
