--- a/app/src/main/res/layout/view_story.xml
+++ b/app/src/main/res/layout/view_story.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-
+<!-- Replaced by custom list_story_item -->
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:tools="http://schemas.android.com/tools"
                 android:id="@+id/story"
@@ -77,7 +77,7 @@
             android:layout_marginTop="2dp"
             android:layout_marginEnd="4dp"
             android:text="A long text that is supposed to touch the end of the line"
-            android:maxLines="5"
+            android:maxLines="6"
             android:transitionName="title"
             style="@style/TextAppearance.Title"
             />
